package ucf.assignments;

public class createTodoList
{
	// This class will be meant to help prevent clutting of the driver class by creating/deleting every new todolist
	// as well as creating/editing/deleting the lists in them
	// Utilization will be using ArrayLists and properly removing them.
}
