@startuml
'https://plantuml.com/class-diagram

class ToDoList
{
    main()
    start()
}

class ToDoListDriver
{
    - toDoListName: TextField
    - editTasks: TextField
    - toDoList: ListView
    - tasksList: ListView


    + addToDoClick()
    + importClick()
    + exportClick()
    + addOrEditClick()
    + viewClick()
}

class createToDoList
{
}


javafx.Application <|-- ToDoList

ToDoList -- ToDoListDriver
ToDoListDriver -- createToDoList



@enduml